- added TransferManager and FileTransfer classes - added cross-platform file picker - added file header request with preview capability - fixed chat screen long toolbar nickname overlap

--- a/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
+++ b/SPIXI/SPIXI.Android/Assets/html/css/spixiui.css
@@ -191,6 +191,10 @@ img.emoji {
     font-size: 12pt;
 }
 
+.spixi-toolbar-chat-name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 .spixi-toolbar-chat-status {
     font-size: 11pt;
     margin-top: -4pt;
@@ -1103,6 +1107,7 @@ img.emoji {
     width: 100%;
     height: 57px;
    /* background-color: aqua;*/
+
 }
 #chatbar {
     -moz-transition: all 0.6s ease-in-out;
@@ -1119,6 +1124,7 @@ img.emoji {
     height: 60px;
     background-color: #FFF;
     border-top: 2px solid #E0E4E6;
+    
 }
 
 .chatbar-container {
